Make external common functions and clean up png-to-csv

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,6 +16,10 @@ provider:
 plugins:
   - serverless-python-requirements
 
+package:
+  include:
+    - common/*
+
 custom:
   bucket: cash-rate
   pythonRequirements:
